En biblioteca libre ahora apunta a las bibliotecas libre

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
@@ -71,8 +71,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="navegacion.css"/>
-        <h:outputStylesheet library="css" name="biblioteca.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/biblioteca.css"/>
 
         <div class="uk-container  padding-inferior" data-uk-filter="target: .js-filter">
             <div class="uk-width-1-1@m uk-margin-medium-top">
@@ -155,8 +155,7 @@
                 </ul>
 <!--            </div>-->
         </div>
-        <h:outputScript library="js" name="/alumno/biblioteca-alumno.js"/>
-
+        <script src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/biblioteca-alumno.js" type="application/json"></script>
     </ui:define>
 </ui:composition>
 </html>
