--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
@@ -68,9 +68,9 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/transcript/ordenar-palabra.css"/>
-        <h:outputStylesheet library="css" name="/alumno/transcript/transcript-drag.css"/>
-        <h:outputStylesheet library="css" name="letra.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/transcript/ordenar-palabra.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/transcript/transcript-drag.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
         <div class="uk-section" style="box-sizing: border-box">
              <div class="uk-container padding-contenedor">
                  <div class="uk-inline uk-flex uk-flex-left uk-text-bold">
@@ -112,11 +112,7 @@
                  </div>
              </div>
         </div>
-
-
-
-
-        <h:outputScript library="js" name="/alumno/order-free-library.js"/>
+        <script src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/order-free-library.js" type="application/json"></script>
     </ui:define>
 </ui:composition>
 </html>
