--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -75,8 +75,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="navegacion.css"/>
-        <h:outputStylesheet library="css" name="biblioteca.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/biblioteca.css"/>
 <!--        <script src="https://www.youtube.com/iframe_api"></script>-->
 
         <div class="uk-container padding-inferior">
@@ -123,7 +123,7 @@
                 </h:panelGroup>
             </div>
         </div>
-        <h:outputScript library="js" name="alumno/activities.js"/>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/activities.js"></script>
     </ui:define>
 </ui:composition>
 </html>
