--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -84,8 +84,8 @@
 
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="letra.css"/>
-        <h:outputStylesheet library="css" name="alumno/dashboard.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/dashboard.css"/>
         <div class="">
             <div class="uk-container padding-contenedor">
                 <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
@@ -383,7 +383,7 @@
 
         </script>
 <!--        <script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"/>-->
-        <h:outputScript library="js" name="alumno/calificacion.js"/>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/calificacion.js"></script>
     </ui:define>
 
 </ui:composition>
