--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -83,8 +83,8 @@
         </div>
     </ui:define>
         <ui:define name="contenido">
-            <h:outputStylesheet library="css" name="alumno/glosario.css"/>
-            <h:outputStylesheet library="css" name="letra.css"/>
+            <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/glosario.css"/>
+            <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>
         <div class="uk-section">
             <div class="uk-container  uk-margin-auto" >
                 <h1 class="lescuadron letra-titulo sombra-titulo">Glossary</h1>
@@ -106,7 +106,7 @@
             </div>
         </div>
             <script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.587.0.min.js"></script>
-         <h:outputScript library="js" name="/alumno/prueba.js"/>
+            <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/prueba.js"></script>
 </ui:define>
 </ui:composition>
 </html>
