--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -71,7 +71,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/mapa-13.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-13.css"/>
         <div class="uk-section uk-margin-small-left uk-margin-small-right" style="margin-bottom: 80px">
             <div class="uk-container padding-contenedor fondo-13 uk-position-relative" >
                 <h:panelGroup layout="block">
