--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -73,7 +73,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/mapa-14.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-14.css"/>
         <div class="uk-section uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-14">
                 <div class="titulo-14">
