--- a/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
@@ -70,7 +70,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="alumno/mapa-mental-historieta.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-mental-historieta.css"/>
         <div class="uk-section  uk-margin-small-right uk-margin-small-left">
             <div  class="uk-container padding-contenedor fondo-6">
                 <h:panelGroup layout="block">
