--- a/tecolotl-web/src/main/webapp/alumno/mindmap/no-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/no-mindmap.xhtml
@@ -67,7 +67,7 @@
     </ui:define>
     <ui:define name="contenido">
         <div class="padding-contenedor">
-            <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
+            <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/select-mindmap.css"/>
             <div class="sin-mapa">
                 <span>No tienes esta tarea asignada</span>
             </div>
