--- a/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
@@ -71,7 +71,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/mapa-experimento.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-experimento.css"/>
         <div class="uk-section">
             <div class="uk-container fondo-mapa3 padding-contenedor posicion-contenedor">
                 <h:panelGroup layout="block">
