--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -66,8 +66,8 @@
                     </div>
                     <div class="uk-card-body padding-card-body">
                         <h3 class="uk-text-uppercase uk-text-bold">#{profesor['student.administration.group']}</h3>
-                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['student.administration.group']}: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
-                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['student.administration.grade']}: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
+                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['student.administration.grade']}: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
+                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['student.administration.group']}: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
                     </div>
                 </div>
             </div>
